objects/HealthCloudGA__CarePlanTemplateTask__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AssignedTo__c</fullName>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Care Coordinator</fullName>
                    <default>true</default>
                    <label>Care Coordinator</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanTemplateGoal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Template Goal</label>
        <referenceTo>HealthCloudGA__CarePlanTemplateGoal__c</referenceTo>
        <relationshipLabel>Care Plan Template Tasks</relationshipLabel>
        <relationshipName>CarePlanTemplateTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanTemplateProblem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Template Problem</label>
        <referenceTo>HealthCloudGA__CarePlanTemplateProblem__c</referenceTo>
        <relationshipLabel>Care Plan Template Tasks</relationshipLabel>
        <relationshipName>CarePlanTemplateTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Template</label>
        <referenceTo>HealthCloudGA__CarePlanTemplate__c</referenceTo>
        <relationshipLabel>Care Plan Template Tasks</relationshipLabel>
        <relationshipName>Care_Plan_Template_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Counselling</fullName>
                </value>
                <value>
                    <fullName>Vaccination</fullName>
                </value>
                <value>
                    <fullName>Exercise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Offset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Offset</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Uncategorized</fullName>
                    <default>true</default>
                    <label>Uncategorized</label>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Care Plan Template Task</label>
    <nameField>
        <label>Care Plan Template Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Plan Template Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HealthCloudGA__ValidateCarePlanTaskAssociation</fullName>
        <active>true</active>
        <description>Associate the task with either a care plan template, problem, or goal</description>
        <errorConditionFormula>AND( ISBLANK( HealthCloudGA__CarePlanTemplate__c ),
                                    ISBLANK( HealthCloudGA__CarePlanTemplateGoal__c),
                                    ISBLANK( HealthCloudGA__CarePlanTemplateProblem__c )
                                    )</errorConditionFormula>
        <errorMessage>Associate the task with either a care plan template, problem, or goal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HealthCloudGA__ValidateCarePlanTaskAssociationForSingle</fullName>
        <active>true</active>
        <description>Associate the task with only one record</description>
        <errorConditionFormula>OR( AND( ISBLANK( HealthCloudGA__CarePlanTemplate__c ), NOT(ISBLANK( HealthCloudGA__CarePlanTemplateGoal__c )), NOT(ISBLANK(  HealthCloudGA__CarePlanTemplateProblem__c )) ),
                                   AND( NOT(ISBLANK( HealthCloudGA__CarePlanTemplate__c )), ISBLANK( HealthCloudGA__CarePlanTemplateGoal__c ), NOT(ISBLANK(  HealthCloudGA__CarePlanTemplateProblem__c )) ),
                                   AND( NOT(ISBLANK( HealthCloudGA__CarePlanTemplate__c )), NOT(ISBLANK( HealthCloudGA__CarePlanTemplateGoal__c )), ISBLANK(  HealthCloudGA__CarePlanTemplateProblem__c ) ),
                                   AND( NOT(ISBLANK( HealthCloudGA__CarePlanTemplate__c )), NOT(ISBLANK( HealthCloudGA__CarePlanTemplateGoal__c )), NOT(ISBLANK(  HealthCloudGA__CarePlanTemplateProblem__c )) ) )</errorConditionFormula>
        <errorMessage>Associate the task with only one record.</errorMessage>
    </validationRules>
</CustomObject>